--- a/citas-react/index.html
+++ b/citas-react/index.html
@@ -8,7 +8,7 @@
   <title>Citas react</title>
 </head>
 
-<body>
+<body class="bg-gray-100 h-screen">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
